🔍 feat: реализация сервиса поиска по леммам с релевантностью и сниппетами